# linear-dest

./: .gitattributes  .gitignore  README.md  SExpr.thr-db51071.dump-simpl  benchmark_results.txt  cabal.project  cabal.project.freeze  format.sh  ghc-bindist@580d39a221.tar.xz  ghc-bindist@61d866f9cf.tar.xz  ghc_compact_prims_580d39a221.elf  hie.yaml  linear-dest.cabal  memory_with_dest-db51071.prof  memory_without_dest-db51071.prof  shell.nix  single_run_stats_to_csv.py  stack.yaml
.github/workflows/: ci.yaml
bench/: Main.hs
bench/Bench/: DList.hs  Map.hs  Parser.hs  Queue.hs  TreeTraversal.hs  Utils.hs
dump/: Main.hs
gc-stats/: Main.hs
jflart/: Main.hs
jflart/DList/: Bench.hs  Impl.hs
jflart/Map/: Bench.hs  Impl.hs
jflart/Parser/: Bench.hs
jflart/Queue/: Bench.hs  Impl.hs
jflart/TreeTraversal/: Bench.hs  Impl.hs
memory/: Main.hs
memory/Bench/Compact/: Pure.hs  SExpr.hs  gen.py  test_data.sexpr
nix/: shell-stack.nix  sources.json
src/Compact/: Pure.hs
src/Compact/Pure/: Inspect.hs  Internal.hs  SExpr.hs  data_2_10.sexpr  data_2_13.sexpr  data_2_16.sexpr  gen.py  gen_samples.py
src/Compact/Pure/Inspect/: Internal.hs
src/Control/Functor/Linear/Internal/: Class.hs  Instances.hs  Kan.hs  State.hs
src/Control/Optics/Linear/: Internal.hs  Traversal.hs
src/Data/Functor/: Linear.hs
src/Data/Functor/Linear/Internal/: Applicative.hs  Functor.hs
src/Data/Monoid/Linear/Internal/: Monoid.hs  Semigroup.hs
src/Data/Ord/Linear/Internal/: Eq.hs  Ord.hs
src/Data/Tuple/: Linear.hs
src/Data/Unrestricted/Linear/Internal/: Consumable.hs  Dupable.hs  Instances.hs  Movable.hs
src/Data/V/Linear/: Internal.hs
src/Data/V/Linear/Internal/: Instances.hs
src/Prelude/: Linear.hs
src/Prelude/Linear/: Internal.hs
test/: Main.hs
test/Test/Compact/: Pure.hs
