cabal-version:      3.0
name:               linear-dest
version:            0.2.0
license:            MIT
license-file:       LICENSE
copyright:          (c) Tweag Holding and affiliates
maintainer:         thomas.bagrel@tweag.io
author:             Tweag
homepage:           https://github.com/tweag/linear-dest#README
synopsis:           Standard library for linear types.
description:        Please see README.md.
category:           Prelude
build-type:         Simple
extra-source-files:
    README.md

source-repository head
    type:     git
    location: https://github.com/tweag/linear-dest

library
    exposed-modules:
        Compact.Pure
        Compact.Pure.SExpr
        Compact.Pure.Internal
        Control.Functor.Linear
        Control.Functor.Linear.Internal.Class
        Control.Functor.Linear.Internal.Instances
        Control.Functor.Linear.Internal.Kan
        Control.Functor.Linear.Internal.MonadTrans
        Control.Functor.Linear.Internal.Reader
        Control.Functor.Linear.Internal.State
        Control.Optics.Linear
        Control.Optics.Linear.Internal
        Control.Optics.Linear.Iso
        Control.Optics.Linear.Lens
        Control.Optics.Linear.Prism
        Control.Optics.Linear.Traversal
        Data.Arity.Linear
        Data.Arity.Linear.Internal
        Data.Bifunctor.Linear
        Data.Bifunctor.Linear.Internal.Bifunctor
        Data.Bifunctor.Linear.Internal.SymmetricMonoidal
        Data.Bool.Linear
        Data.Either.Linear
        Data.Functor.Linear
        Data.Functor.Linear.Internal.Functor
        Data.Functor.Linear.Internal.Applicative
        Data.List.Linear
        Data.Maybe.Linear
        Data.Monoid.Linear
        Data.Monoid.Linear.Internal.Monoid
        Data.Monoid.Linear.Internal.Semigroup
        Data.Num.Linear
        Data.Ord.Linear
        Data.Ord.Linear.Internal.Ord
        Data.Ord.Linear.Internal.Eq
        Data.Profunctor.Kleisli.Linear
        Data.Profunctor.Linear
        Data.Tuple.Linear
        Data.Unrestricted.Linear
        Data.Unrestricted.Linear.Internal.Consumable
        Data.Unrestricted.Linear.Internal.Dupable
        Data.Unrestricted.Linear.Internal.Movable
        Data.Unrestricted.Linear.Internal.Instances
        Data.Unrestricted.Linear.Internal.Ur
        Data.Unrestricted.Linear.Internal.UrT
        Data.Replicator.Linear
        Data.Replicator.Linear.Internal
        Data.Replicator.Linear.Internal.ReplicationStream
        Data.Replicator.Linear.Internal.Instances
        Data.V.Linear
        Data.V.Linear.Internal
        Data.V.Linear.Internal.Instances
        Prelude.Linear
        Prelude.Linear.Internal
        Prelude.Linear.Internal.TypeEq
        Unsafe.Linear

    hs-source-dirs:   src
    -- if impl(ghc >= 9.4.0)
    --     hs-source-dirs: src-version-changes/ghc94/after
    -- else
    --     hs-source-dirs: src-version-changes/ghc94/before
    -- if impl(ghc >= 9.6.0)
    --     hs-source-dirs: src-version-changes/ghc96/after
    -- else
    --     hs-source-dirs: src-version-changes/ghc96/before

    default-language: Haskell2010
    build-depends:

        base >=4.16 && <5,
        bytestring,
        constraints,
        containers,
        deepseq,
        ghc-compact,
        ghc-prim,
        -- hashable,
        -- linear-generics >= 0.2,
        reflection >= 2.1,
        storable-tuple,
        text,
        transformers,
        vector >=0.12.2,
        primitive,

executable dump
    main-is:          Main.hs
    hs-source-dirs:   dump
    default-language: Haskell2010
    build-depends:
        base,
        bytestring,
        deepseq,
        ghc-compact,
        linear-dest,
        containers,
        vector

benchmark jflart
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   jflart
    default-language: Haskell2010
    other-modules:
        Map.Bench
        Map.Impl
        DList.Impl
        Queue.Impl
        TreeTraversal.Bench
        TreeTraversal.Impl
    build-depends:
        base,
        bytestring,
        deepseq,
        ghc-compact,
        linear-dest,
        containers,
        vector,
        tasty,
        tasty-bench >= 0.3.4,
        tasty-hunit

test-suite test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    other-modules:
        Test.Compact.Pure

    default-language: Haskell2010
    build-depends:
        base,
        bytestring,
        deepseq,
        ghc-compact,
        linear-dest,
        containers,
        tasty,
        tasty-hunit,
        vector

benchmark memory
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   memory
    other-modules:
        Bench.Compact.Pure
    default-language: Haskell2010
    build-depends:
        base,
        bytestring,
        deepseq,
        ghc-compact,
        linear-dest,
        tasty,
        tasty-bench >= 0.3.4,
        tasty-hunit
